# ECF-NeuroEvolution

./: .gitignore  .gitmodules  CMakeLists.txt  DirectTest.cpp  DirectTest.h  DisplayBestOperator.cpp  DisplayBestOperator.h  NetworkCenter.cpp  NetworkCenter.h  PrintBestArchitectureOperator.cpp  PrintBestArchitectureOperator.h  UnstructuredLayer.h  graph.sh  main.cpp  parameters.txt  parameters.xml
CellDivision/: ANeuralEval.h  CellDivisionEval.cpp  CellDivisionEval.h  ReducedCellDivisionEval.cpp  ReducedCellDivisionEval.h
TestEnv/: extract.sh  grapher.sh  tester.sh
TestEnv/tests/: function_impulse.xml  function_onedim.xml  function_rosenbrock.xml  wine.xml  xor.xml
problems/: IProblem.h  RegressionProblem.cpp  RegressionProblem.h  WineQualityProblem.cpp  WineQualityProblem.h  XORProblem.cpp  XORProblem.h
